[project]
name = "memstate"
version = "0.3.2"
description = "ACID-like memory for Agents. Atomically syncs Pydantic models & Vector DBs with Git-style versioning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Slava Kurachevsky" }
]
keywords = [
    "ai",
    "agents",
    "memory",
    "state-management",
    "llm",
    "langchain",
    "langgraph",
    "pydantic",
    "sqlite",
    "acid",
    "atomicity",
    "consistency"
]
packages = [
    { include = "memstate" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
redis = ["redis>=7.1.0"]
langgraph = ["langgraph>=1.0.4"]
chromadb = ["chromadb>=1.3.5"]

[dependency-groups]
dev = [
    "bandit>=1.9.1",
    "black>=25.11.0",
    "fakeredis>=2.32.1",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[project.urls]
Homepage = "https://github.com/scream4ik/MemState"
Repository = "https://github.com/scream4ik/MemState"
Issues = "https://github.com/scream4ik/MemState/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memstate"]

[tool.mypy]
files = "memstate"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
known_first_party = "memstate"
multi_line_output = 3
ensure_newline_before_comments = true
default_section = "THIRDPARTY"
skip = [".venv/"]
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B608"]
